# px7-radio

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  radio.py  requirements.txt
api/: __init__.py  ping.py
core/: handleCMD.py  help.py  media_manager.py  parser.py  ping.py  ui.py
player/: player.py
services/: radio_service.py  youtube_service.py
servics/: youtube_service.py
src/px7_radio/: config.py  main.py
src/px7_radio/core/: handleCMD.py  help.py  media_manager.py  ui.py
src/px7_radio/services/: radio_service.py  youtube_service.py
ui/: ui.py
v2.0/: main.py
v2.0/core/: ping.py  ui.py
