[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "px7-radio"
version = "0.1.4"
description = "A minimal, fast alternative to heavy music apps — built for the terminal."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "px7nn", email = "px7nnn@gmail.com"}
]
license = { text = "MIT" }

dependencies = [
    "requests",
    "ping3",
    "python-vlc",
    "yt-dlp"
]

[project.scripts]
px7-radio = "px7_radio.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]